Apps: App list and dialog fixes (#103)
* trim overflowing link in the dialog

* when the category filter changes, we scroll to the top

* width of .props should take 100% of its container

--- a/website/apps/styles.css
+++ b/website/apps/styles.css
@@ -44,6 +44,12 @@ body {
   flex: 1;
 }
 
+#apps .ellipse {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
 #apps header {
   text-align: center;
 }
@@ -98,30 +104,21 @@ body {
 #apps .title {
   font-weight: bold;
   line-height: 1.3;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
 }
 
 #apps .description {
   max-height: 60px;
   line-height: 1.2;
   font-size: 0.9rem;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
 }
 
 #apps .props {
-  width: calc(300px - var(--icon) - var(--padding));
+  width: 100%;
 }
 
 #apps .author {
   opacity: 0.8;
   font-size: .9rem;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
 }
 
 #footer {
